--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "description": "NYT dev test",
   "scripts": {
-    "start": "npm run webpack",
+    "build": "npm run webpack",
     "dev": "webpack serve",
-    "webpack": "webpack --watch"
+    "webpack": "webpack"
   },
   "license": "MIT",
   "dependencies": {},
@@ -14,6 +14,8 @@
     "@babel/preset-env": "^7.12.13",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^5.0.0",
     "node-sass": "^5.0.0",
     "sass": "^1.32.6",
     "sass-loader": "^11.0.0",
