--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@babel/preset-env": "^7.12.13",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
-    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0",
     "node-sass": "^5.0.0",
+    "pug": "^3.0.0",
+    "pug-loader": "^2.4.0",
     "sass": "^1.32.6",
     "sass-loader": "^11.0.0",
     "style-loader": "^2.0.0",
